spade-tests/src/snapshots/spade_tests__typeinference__fields_on_declared_vars_can_be_used.snap
---
source: spade-tests/src/typeinference.rs
---
struct X {a: bool}

entity a() -> bool {
    decl x;
    let _: int<32> = x.a;
    let x = X(false);
    true
}


error: Expected type int<32>, got bool
  ┌─ testinput:5:22
  │
5 │     let _: int<32> = x.a;
  │            -------   ^^^ Expected int<32>
  │            │          
  │            Type int<32> inferred here
  │
  = note: Expected: int<32>
               Got: bool
