spade-tests/src/snapshots/spade_tests__typeinference__first_fsm_arg_must_be_pipeline.snap
---
source: spade-tests/src/typeinference.rs
---
fsm test() {}


error: Missing clock and reset for fsm
  ┌─ testinput:1:9
  │
1 │ fsm test() {}
  │         ^^
  │
  = note: All FSMs need to take a clock and a reset
  = Consider adding the clock and reset
  │
1 │ fsm test(clock: clk, rst: bool) {}
  │         ~~~~~~~~~~~~~~~~~~~~~~~


